--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
 
-
         <activity android:name=".SplashScreen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +24,8 @@
 
 
         <activity android:name=".ChooseActivity">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,15 +34,25 @@
         </activity>>
 
         <activity android:name=".EggSelected">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
         </activity>>
         <activity android:name=".EggPlay">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
         </activity>>
 
         <activity android:name=".SpikeySelected">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
         </activity>>
         <activity android:name=".BaldySelected">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
         </activity>>
         <activity android:name=".BuggySelected">
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
         </activity>>
 
     </application>
