--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
+        android:label="muggy"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
@@ -14,7 +14,7 @@
         <activity android:name=".SplashScreen"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="muggy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
